Stop text wrapping in our tag bubbles

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -103,6 +103,7 @@ img.sector {
     border-color: #2e6d2e;
     border-radius: 10px;
     margin-bottom: 3px;
+    white-space: nowrap;
 }
 
 .image span.keyword.autotag {
